--- a/index.html
+++ b/index.html
@@ -4,86 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DVC-PCSTORE</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <title>Document</title>
 </head>
 
-<body>
-    <div class="container">
-        <header class="navegation">
-            <h1>MOTHER BOARD STORE</h1>
-        </header>
-
-        <div class="sidebar">
-            <div class=" title">
-                <h3>Categoria</h3>
+<body class="container">
+    <!--* header-->
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="./assets/img/coche.png" alt="coche">
+                <h1>Mother Board Store</h1>
             </div>
-            <div class="category">
-                <p>Notebooks (125)</p>
-                <p>Tarjeta Grafica (30)</p>
-                <p>Procesador (80)</p>
-                <p>Ram (100)</p>
-                <p>Placa Madre (60)</p>
+            <div class="menu">
+                <img src="./assets/img/menu.png" alt="menu">
             </div>
+            <ul class="menu-content">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Catalogo</a></li>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+     <!--* card and products-->
+    <section>
 
-        </div>
-        <main>
-            <div class="item">
-                <div class="product">
-                    <div class="card-png">
-                        <img src="./assets/img/b560-aorus-pro-ax-224990.png" alt="b560-aorus-pro-ax-">
-                    </div>
-                    <div class="text">
-                        <h3>M/B AMD B560 Aorus PRO AX</h3>
-                        <p>$ 224.990</p>
-                    </div>
-                    <div class="bttn">
-                        <button>COMPRAR</button>
-                    </div>
-                </div>
-                <div class="product">
-                    <div class="card-png">
-                        <img src="./assets/img/x670e-plus-tuf-gaming-wifi-398190.png" alt="x670e-plus-tuf-gaming-wifi">
-                    </div>
-                    <div class="text">
-                        <h3>M/B AMD X670E-PLUS TUF Gaming</h3>
-                        <p>$ 398.190</p>
-                    </div>
-                    <div class="bttn">
-                        <button>COMPRAR</button>
-                    </div>
-                </div>
-                <div class="product">
-                    <div class="card-png">
-                        <img src="./assets/img/x670e-rog-crosshair-hero-749990.png" alt="">
-                    </div>
-                    <div class="text">
-                        <h3>M/B AMD X670E ROG Crosshair Hero</h3>
-                        <p>$ 749.990</p>
-                    </div>
-                    <div class="bttn">
-                        <button>COMPRAR</button>
-                    </div>
-                </div>
-                <div class="product">
-                    <div class="card-png">
-                        <img src="./assets/img/msi-tomahawk-b550-214990.png" alt="msitomahawk">
-                    </div>
-                    <div class="text">
-                        <h3>M/B AMD B550 MSI Tomahawk </h3>
-                        <p>$ 214.990</p>
-                    </div>
-                    <div class="bttn">
-                        <button>COMPRAR</button>
-                    </div>
-                </div>
-
-            </div>
-        </main>
-        <footer>
-            <p>@MOTHER-BOARD-STORE</p>
-        </footer>
-    </div>
+    </section>
+     <!--* footer-->
+    <footer>
+        <article class="social">
+            <img src="/assets/img/instagram.png" alt="instagram">
+            <img src="/assets/img/facebook.png" alt="facebook">
+        </article>
+        <h1>Mother Board Store</h1>
+    </footer>
 </body>
 
 </html>
