--- a/index.html
+++ b/index.html
@@ -29,7 +29,18 @@
     </header>
      <!--* card and products-->
     <section>
-
+        <div class="item">
+            <div class="product">
+                <div class="card-png">
+                    <img src="./assets/img/b560-aorus-pro-ax-224990.png" alt="b560-aorus-pro-ax-">
+                </div>
+                <div class="text">
+                    <p>M/B AMD B560 Aorus PRO AX</p>
+                </div>
+                <div class="bttn">
+                    <button>Ver Mas</button>
+                </div>
+            </div>
     </section>
      <!--* footer-->
     <footer>
