--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/style.css">
-    <title>Document</title>
+    <title>Mother Board Store</title>
 </head>
 
 <body class="container">
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="./assets/img/coche.png" alt="coche">
+                <img src="./assets/img/upc.png" alt="coche">
                 <h1>Mother Board Store</h1>
             </div>
             <div class="menu">
@@ -26,9 +26,14 @@
                 <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
+        <div class="filter">
+            <form>
+                <input name="fsrch" id="fsrch" placeholder="Search W3Schools">
+            </form>
+        </div>
     </header>
-     <!--* card and products-->
-    <section>
+    <!--* card and products-->
+    <section class="hero">
         <div class="item">
             <div class="product">
                 <div class="card-png">
@@ -42,7 +47,7 @@
                 </div>
             </div>
     </section>
-     <!--* footer-->
+    <!--* footer-->
     <footer>
         <article class="social">
             <img src="/assets/img/instagram.png" alt="instagram">
