--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section class="hero">
         <div class="item">
             <div class="product">
-                <div class="card-png">
+                <div class="card">
                     <img src="./assets/img/b560-aorus-pro-ax-224990.png" alt="b560-aorus-pro-ax-">
                 </div>
                 <div class="text">
