--- a/index.html
+++ b/index.html
@@ -8,53 +8,72 @@
     <title>Mother Board Store</title>
 </head>
 
-<body class="container">
-    <!--* header-->
-    <header>
-        <nav>
-            <div class="logo">
-                <img src="./assets/img/upc.png" alt="coche">
-                <h1>Mother Board Store</h1>
-            </div>
-            <div class="menu">
-                <img src="./assets/img/menu.png" alt="menu">
-            </div>
-            <ul class="menu-content">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Catalogo</a></li>
-                <li><a href="#">Ofertas</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
-        <div class="filter">
-            <form>
-                <input name="fsrch" id="fsrch" placeholder="Search W3Schools">
-            </form>
-        </div>
-    </header>
-    <!--* card and products-->
-    <section class="hero">
-        <div class="item">
-            <div class="product">
-                <div class="card">
-                    <img src="./assets/img/b560-aorus-pro-ax-224990.png" alt="b560-aorus-pro-ax-">
+<body>
+    <div class="container">
+        <!--* header-->
+        <header>
+            <nav>
+                <div class="logo">
+                    <img src="./assets/img/torre-de-pc.png" alt="torre-de-pc">
+                    <h1>Mother Board Store</h1>
                 </div>
-                <div class="text">
-                    <p>M/B AMD B560 Aorus PRO AX</p>
+                <div class="menu">
+                    <img src="./assets/img/menu.png" alt="menu">
                 </div>
-                <div class="bttn">
-                    <button>Ver Mas</button>
-                </div>
+                <ul class="menu-content">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Catalogo</a></li>
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
+            
+        </header>
+        <!--* card and products-->
+        <section class="hero">
+            <div class="filter">
+                <p>Ordenar Por:</p>
+                <form action="#">
+                    <select id="mb" name="Mother Board">
+                        <option value="mb1">Mother Board</option>
+                        <option value="GPU">Graphic Cards</option>
+                    </select>
+                </form>
             </div>
-    </section>
-    <!--* footer-->
-    <footer>
-        <article class="social">
-            <img src="/assets/img/instagram.png" alt="instagram">
-            <img src="/assets/img/facebook.png" alt="facebook">
-        </article>
-        <h1>Mother Board Store</h1>
-    </footer>
+            <div class="item">
+                <div class="product">
+                    <div class="card">
+                        <img src="./assets/img/b560-aorus-pro-ax-224990.png" alt="b560-aorus-pro-ax-">
+                    </div>
+                    <div class="text">
+                        <p>Model: M/B AMD B560 Aorus PRO AX</p>
+                    </div>
+                    <div class="bttn">
+                        <button>Ver Mas</button>
+                    </div>
+           <!--* Paginacion-->          
+                    <div class="page">
+                        <table>
+                            <tr>
+                                <th><</th>
+                                <th>1</th>
+                                <th>2</th>
+                                <th>3</th>
+                                <th>></th>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+        </section>
+        <!--* footer-->
+        <footer>
+            <article class="social">
+                <img src="/assets/img/instagram.png" alt="instagram">
+                <img src="/assets/img/facebook.png" alt="facebook">
+            </article>
+            <h1>Mother Board Store</h1>
+        </footer>
+    </div>
 </body>
 
 </html>
