--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
-            
+
         </header>
         <!--* card and products-->
         <section class="hero">
@@ -40,7 +40,7 @@
                     </select>
                 </form>
             </div>
-            <div class="item">
+            <article class="item">
                 <div class="product">
                     <div class="card">
                         <img src="./assets/img/b560-aorus-pro-ax-224990.png" alt="b560-aorus-pro-ax-">
@@ -51,19 +51,20 @@
                     <div class="bttn">
                         <button>Ver Mas</button>
                     </div>
-           <!--* Paginacion-->          
-                    <div class="page">
-                        <table>
-                            <tr>
-                                <th><</th>
-                                <th>1</th>
-                                <th>2</th>
-                                <th>3</th>
-                                <th>></th>
-                            </tr>
-                        </table>
-                    </div>
                 </div>
+            </article>
+            <!--* Paginacion-->
+            <div class="page">
+                <table>
+                    <tr>
+                        <th><</th>
+                        <th>1</th>
+                        <th>2</th>
+                        <th>3</th>
+                        <th>></th>
+                    </tr>
+                </table>
+            </div>
         </section>
         <!--* footer-->
         <footer>
@@ -71,7 +72,7 @@
                 <img src="/assets/img/instagram.png" alt="instagram">
                 <img src="/assets/img/facebook.png" alt="facebook">
             </article>
-            <h1>Mother Board Store</h1>
+            <h1>@Mother-Board-Store</h1>
         </footer>
     </div>
 </body>
