--- a/index.html
+++ b/index.html
@@ -27,20 +27,21 @@
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
-
+            <section>
+                <div class="filter">
+                    <p>Ordenar Por:</p>
+                    <form action="#">
+                        <select id="mb" name="Mother Board">
+                            <option value="mb1">Mother Board</option>
+                            <option value="GPU">Graphic Cards</option>
+                        </select>
+                    </form>
+                </div>
+            </section>
         </header>
         <!--* card and products-->
         <section class="hero">
-            <div class="filter">
-                <p>Ordenar Por:</p>
-                <form action="#">
-                    <select id="mb" name="Mother Board">
-                        <option value="mb1">Mother Board</option>
-                        <option value="GPU">Graphic Cards</option>
-                    </select>
-                </form>
-            </div>
-            <article class="item">
+            <div class="item">
                 <div class="product">
                     <div class="card">
                         <img src="./assets/img/b560-aorus-pro-ax-224990.png" alt="b560-aorus-pro-ax-">
@@ -52,18 +53,18 @@
                         <button>Ver Mas</button>
                     </div>
                 </div>
-            </article>
-            <!--* Paginacion-->
-            <div class="page">
-                <table>
-                    <tr>
-                        <th><</th>
-                        <th>1</th>
-                        <th>2</th>
-                        <th>3</th>
-                        <th>></th>
-                    </tr>
-                </table>
+                <!--* Paginacion-->
+                <div class="page">
+                    <table>
+                        <tr>
+                            <th><</th>
+                            <th>1</th>
+                            <th>2</th>
+                            <th>3</th>
+                            <th>></th>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </section>
         <!--* footer-->
@@ -72,7 +73,7 @@
                 <img src="/assets/img/instagram.png" alt="instagram">
                 <img src="/assets/img/facebook.png" alt="facebook">
             </article>
-            <h1>@Mother-Board-Store</h1>
+            <h1>Mother Board Store</h1>
         </footer>
     </div>
 </body>
