--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                     <li><a href="#">Contacto</a></li>
                 </ul>
             </nav>
+            <section class="sidebar">
+                <ul class="menu-content">
+                    <li><a>Inicio</a></li>
+                    <li><a>Catalogo</a></li>
+                    <li><a>Ofertas</a></li>
+                    <li><a>Contacto</a></li>
+                </ul>
+            </section>
             <section>
                 <div class="filter">
                     <p>Ordenar Por:</p>
