--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav>
             <section>
                 <img src="./Assets/img/torre-de-pc.png" alt="">
-                <h3>Moder Board Store</h3>
+                <h3>Mother Board Store</h3>
 
             </section>
             <ul>
@@ -102,6 +102,7 @@
                 <span class="mdi mdi-facebook icons_material"></span>
                 <span class="mdi mdi-instagram icons_material"></span>
             </section>
+            <h4>@PC-MB-Store</h4>
             <p>Todos los derechos reservados</p>
         </footer>
     </div>
